--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+altgraph==0.17.3
 anyio==3.6.2
 certifi==2023.5.7
 flet==0.6.2
@@ -6,9 +7,12 @@ h11==0.14.0
 httpcore==0.16.3
 httpx==0.23.3
 idna==3.4
+macholib==1.16.2
 oauthlib==3.2.2
 packaging==23.1
 Pillow==9.5.0
+pyinstaller==5.11.0
+pyinstaller-hooks-contrib==2023.3
 repath==0.9.0
 rfc3986==1.5.0
 six==1.16.0
